--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Elvenar Helper Extension",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Hooks to help with Elvenar",
   "permissions": [
     "storage",
@@ -23,7 +23,8 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "icon32.png"
+        "icon32.png",
+        "sprite.png"
       ],
       "matches": [
         "https://en3.elvenar.com/*"
