--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elvenar-helper",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Extension to help with Elvenar",
   "license": "GNU GPLv3",
   "author": "Aviad Pineles",
@@ -31,9 +31,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.2.0",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.11.0",
     "rxjs": "^7.8.2"
   }
 }
