--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Elvenar Helper Extension",
-  "version": "2.1.0",
-  "description": "A comprehensive toolkit for Elvenar featuring a live city planner, inventory manager, and trade helper.",
+  "version": "2.1.1",
+  "description": "A comprehensive toolkit for Elvenar featuring a live city planner, inventory manager, and more.",
   "permissions": [
     "storage",
     "webRequest"
