--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elvenar-helper",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Extension to help with Elvenar",
   "license": "GNU GPLv3",
   "author": "Aviad Pineles",
@@ -10,7 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
     "start": "ts-node index.ts",
-    "pack": "npm run webpack && node util/create-store-package.js",
+    "pack": "npm run pack:chrome",
+    "pack:chrome": "copy assets\\manifest-chrome.json assets\\manifest.json && npm run webpack && node util/create-store-package.js",
+    "pack:firefox": "copy assets\\manifest-firefox.json assets\\manifest.json && npm run webpack && node util/create-store-package.js store-dist-firefox",
     "lint": "eslint src"
   },
   "devDependencies": {
