--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "npm run webpack:chrome",
-    "webpack:chrome": "copy manifest\\manifest-chrome.json assets\\manifest.json && webpack",
-    "webpack:firefox": "copy manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox",
+    "webpack:chrome": "copy /y manifest\\manifest-chrome.json assets\\manifest.json && webpack",
+    "webpack:firefox": "copy /y manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox",
     "start": "ts-node index.ts",
     "pack": "npm run pack:chrome",
-    "pack:chrome": "copy manifest\\manifest-chrome.json assets\\manifest.json && webpack && node util/create-store-package.js",
-    "pack:firefox": "copy manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox && node util/create-store-package.js store-dist-firefox",
+    "pack:chrome": "copy /y manifest\\manifest-chrome.json assets\\manifest.json && webpack && node util/create-store-package.js",
+    "pack:firefox": "copy /y manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox && node util/create-store-package.js firefox",
     "lint": "eslint src"
   },
   "devDependencies": {
