--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.30.1",
     "jszip": "^3.10.1",
+    "simple-git": "^3.30.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
