--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elvenar-helper",
-  "version": "3.3.0",
-  "description": "Extension to help with Elvenar",
+  "name": "elven-assist",
+  "version": "4.0.0",
+  "description": "Extension to help with Elvenar city planning",
   "license": "GNU GPLv3",
   "author": "Aviad Pineles",
   "sideEffects": false,
