feat: chat view

--- a/manifest/manifest-firefox.json
+++ b/manifest/manifest-firefox.json
@@ -33,7 +33,8 @@
     {
       "resources": [
         "icon32.png",
-        "sprite.png"
+        "sprite.png",
+        "inject.bundle.js"
       ],
       "matches": [
         "https://*.elvenar.com/*"
