--- a/manifest/manifest-chrome.json
+++ b/manifest/manifest-chrome.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "ElvenAssist",
   "version": "5.3.0",
-  "description": "A comprehensive toolkit for Elvenar featuring a live city planner, inventory manager, and more.",
+  "description": "A comprehensive, unofficial toolkit for Elvenar featuring a live city planner, inventory manager, and FA tracker.",
   "permissions": [
     "storage",
     "webRequest"
