--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "ts-node index.ts",
     "pack": "npm run pack:chrome",
     "pack:chrome": "copy /y manifest\\manifest-chrome.json assets\\manifest.json && webpack && node util/create-store-package.js",
+    "pack:safari": "cp manifest/manifest-chrome.json assets/manifest.json && webpack && node util/create-store-package.js",
     "pack:firefox": "copy /y manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox && node util/create-store-package.js firefox",
     "lint": "eslint src"
   },
