--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elven-assist",
-  "version": "5.7.0",
+  "version": "5.7.1",
   "description": "Unofficial extension to help with Elvenar city planning",
   "license": "GNU GPLv3",
   "author": "Aviad Pineles",
@@ -43,6 +43,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.11.0",
+    "rxjs": "^7.8.2",
     "zustand": "^5.0.9"
   }
 }
