--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pack:chrome": "copy /y manifest\\manifest-chrome.json assets\\manifest.json && webpack && node util/create-store-package.js",
     "pack:safari": "cp manifest/manifest-safari.json assets/manifest.json && webpack && node util/create-store-package.js",
     "pack:firefox": "copy /y manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox && node util/create-store-package.js firefox",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prettify": "prettier --write src"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
