--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pack:safari": "cp manifest/manifest-safari.json assets/manifest.json && webpack --env=production && node util/create-store-package.js",
     "pack:firefox": "copy /y manifest\\manifest-firefox.json assets\\manifest.json && webpack --env=firefox --env=production && node util/create-store-package.js firefox",
     "lint": "eslint src",
-    "prettify": "prettier --write src"
+    "prettify": "prettier --write src",
+    "bump": "node util/set-version.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
