--- a/manifest/manifest-firefox.json
+++ b/manifest/manifest-firefox.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ElvenAssist",
-  "version": "5.8.6",
+  "version": "5.8.7",
   "description": "A comprehensive unofficial toolkit for Elvenar featuring a live city planner, inventory manager, and FA tracker.",
   "permissions": [
     "storage",
@@ -12,7 +12,9 @@
       "id": "@elvenar-helper-extension",
       "strict_min_version": "146.0",
       "data_collection_permissions": {
-        "required": ["websiteContent"],
+        "required": [
+          "websiteContent"
+        ],
         "optional": []
       }
     }
