--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint src",
     "prettify": "prettier --write src",
     "bump": "node util/set-version.js",
-    "release": "node util/create-release.js"
+    "release": "node util/create-release.js",
+    "deploy:chrome": "node util/deploy-chrome.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
